--- a/public/angular/index.html
+++ b/public/angular/index.html
@@ -42,6 +42,7 @@
     <!-- application scripts -->
     <script src="app.js"></script>
     <script src="app_services/authentication.service.js"></script>
+    <script src="app_services/user.service.js"></script>
     <script src="home/home.controller.js"></script>
     <script src="login/login.controller.js"></script>
 
