created dashboard view and controller; added user company and department to homepage view; got navigation bar to render

--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- include navbar -->
-    <ng-include src="app_content/navbar.html"></ng-include>
+    <ng-include src="'app_content/navbar.html'"></ng-include>
 
 
     <!-- main app container -->
@@ -45,7 +45,7 @@
     <script src="app_services/user.service.js"></script>
     <script src="home/home.controller.js"></script>
     <script src="login/login.controller.js"></script>
-
+    <script src="dashboard/dashboard.controller.js"></script>
 
 </body>
 
