Landing page and dashboard view modifications

--- a/public/ui/app_content/navbar.html
+++ b/public/ui/app_content/navbar.html
@@ -24,8 +24,8 @@
 
             <ul class="nav navbar-nav">
 
-                <li><a href="#/home">Homepage</a></li>
-                <li><a href="#/dashboard">Main Dashboard</a></li>
+                <li><a href="#/home">Landing Page</a></li>
+                <li><a href="#/dashboard">Security Services Dashboard</a></li>
 
                 <!--
                 <li class="dropdown">
