--- a/public/ui/dashboard/dashboard.view.html
+++ b/public/ui/dashboard/dashboard.view.html
@@ -2,7 +2,7 @@
 
     <div ng-if="DashboardController.username">
 
-        <h3>Logged in as: {{DashboardController.username}}</h3>
+        <h4>Hello, {{DashboardController.username}}</h4>
 
         <div ng-if="DashboardController.photo">
 
@@ -18,7 +18,7 @@
 
     <div class="jumbotron">
 
-        <h2 style="-webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.05)));}">Kiewit Security Dashboard</h2>
+        <h2 style="-webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.05)));}">Security Services Dashboard</h2>
 
         <div style="margin-top: -15px"></div>
         <hr>
