--- a/public/ui/home/home.view.html
+++ b/public/ui/home/home.view.html
@@ -21,7 +21,7 @@
 
     <div class="jumbotron">
 
-        <h2 style="-webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.05)));}">Homepage</h2>
+        <h2 style="-webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.05)));}">Kiewit Security - Landing Page</h2>
         <div style="margin-top: -15px"></div>   
         <hr>
         <div style="margin-top: 50px"></div>
