modified scheduled commands to run on CST timezone instead of UTC

--- a/public/ui/home/home.view.html
+++ b/public/ui/home/home.view.html
@@ -35,3 +35,39 @@
     </div>
 
 </div>
+
+<!--    
+<div class="container">
+
+    <rss version="2.0">
+        <channel>
+            <title>Cisco Security Advisories</title>
+            <link>http://www.cisco.com</link>
+            <description>Cisco Security Advisories</description>
+            <language/>
+            <copyright>1992-2009 Cisco Systems, Inc. All rights reserved.</copyright>
+            <pubDate>Tue, 25 Oct 2016 19:46:05 GMT</pubDate>
+            <ttl>120</ttl>
+            <lastBuildDate/>
+            <category>Security Advisories</category>
+            <generator>CNS RSS Script</generator>
+            <image>
+                <title>News@Cisco</title>
+                <url>http://cisco.com/web/fw/i/logo.gif</url>
+                <link>http://newsroom.cisco.com</link>
+                <width>107</width>
+                <height>70</height>
+            </image>
+            <item>
+                <title/>
+                <link/>
+                <description/>
+                <pubDate/>
+                <guid/>
+            </item>
+        </channel>
+    </rss>
+
+
+</div>
+-->
